<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="14dp">

    <TextView
        android:id="@+id/verify_code_send_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_size_20dp"
        android:text="@string/verify_code_sent_to"
        android:textColor="@color/main_btn_normal"
        android:textSize="@dimen/font15sp" />

    <TextView
        android:id="@+id/mail_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/verify_code_send_to"
        android:text="33****44@qq.com"
        android:textColor="@color/theme_green"
        android:textSize="@dimen/font15sp" />

    <TextView
        android:id="@+id/input_new_pw_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/verify_code_send_to"
        android:layout_below="@id/verify_code_send_to"
        android:layout_marginTop="28dp"
        android:lineSpacingExtra="7dp"
        android:paddingLeft="@dimen/margin_size_20dp"
        android:paddingRight="@dimen/margin_size_20dp"
        android:text="@string/reset_password_sent_to_mailbox"
        android:textColor="@color/light_black"
        android:textSize="@dimen/font13sp" />

    <Button
        android:id="@+id/btn_finish"
        style="@style/loginRegisterButtonStyle"
        android:layout_below="@id/input_new_pw_text2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/deep_btn_green_selector"
        android:text="@string/finish"
        android:textSize="@dimen/font16sp" />

</RelativeLayout>